[tool.poetry]
name = "financial-chat"
version = "0.1.0"
description = "LangChain Multi-Agent Stock Analysis Demo"
authors = ["Demo <demo@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.2.1"
langchain-anthropic = "^0.1.13"
langgraph = "^0.2.0"
langchain-community = "^0.2.1"
langserve = "^0.2.1"
streamlit = "^1.35.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
